# tuple-keydef

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: fast_testing.yml  publish.yml
cmake/: compiler.cmake  utils.cmake
extra/: CMakeLists.txt  txt2c.c
key_def/: CMakeLists.txt  init.c  key_def.c  key_def.h  key_def.lua  util.h
keydef/: CMakeLists.txt  key_def.c  key_def.lua
test/: CMakeLists.txt  hot_reload.test.lua  key_def.test.lua  runtest.sh  tuple_keydef.test.lua
tuple/: CMakeLists.txt  key_def.c  keydef.c  keydef_version.h  postload.lua  util.c  util.h
